new distribution charts added and code functions more generally for all scenarios